# image-catalog

./: .env-local-example  .gitignore  README.md  client_provider.py  config.py  dev-assistance-prompts.md  indexer.py  main.py  metadata_repository.py  prompt_provider.py  pyproject.toml
ai/: client_provider.py
backend/: .coveragerc  .env-local-example  .env.development  .env.production  .env.test  .pre-commit-config.yaml  .ruff.toml  README.md  api-server.py  config.py  indexer.py  pyproject.toml  pytest.ini  run_tests.py  server.py
backend/ai/: __init__.py  client_provider.py  prompt_provider.py
backend/ai/prompts/: image-analysis.md
backend/api/: __init__.py  image_catalog_router.py
backend/api_routes/: image_catalog_router.py
backend/apis/: image_catalog_router.py
backend/configuration/: __init__.py  config.py  logging_config.py
backend/core/: __init__.py  dependencies.py  exceptions.py  middleware.py  retry.py
backend/images/: __init__.py  image_handler.py
backend/mcp/: image_catalog_mcp.py
backend/mcp_tools/: __init__.py  image_catalog_mcp.py
backend/models/: api_models.py  indexing_models.py  models.py
backend/repository/: __init__.py  filtering_thresholds.py  metadata_repository.py  multimodal_repository.py  search_transformer.py
backend/scripts/: validate_config.py
backend/services/: __init__.py  image_service.py  indexing_service.py  search_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: test_data.py
backend/tests/integration/: test_api_routes.py  test_mcp_tools.py  test_repositories.py
backend/tests/unit/: test_ai_client.py  test_basic_functionality.py  test_config.py  test_image_handler.py  test_models.py
doc-images/: local-multimodal-ai.drawio
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
indexer/: analysis-prompt.md  image_handler.py  indexer.py  main.py
models/: analysis_result.py  models.py
(+23 files in other folders)
