[project]
name = "image-catalog"
version = "0.1.0"
description = "An searchable catalog of your images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.4.0",
    "fastapi>=0.121.2",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "pillow>=12.0.0",
    "open-clip-torch>=3.2.0"
]
