[project]
name = "image-catalog"
version = "0.1.0"
description = "A searchable catalog of your images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.4.0",
    "fastapi[standard]>=0.128.0",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "pillow>=12.1.0",
    "open-clip-torch>=3.2.0",
    "python-multipart>=0.0.21",
    "numpy>=2.4.0",
    "fastmcp>=2.14.2",
    "uvicorn>=0.42.0"
]
